array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var max=0
  for (x <- island){
    if (x>=max){
      max=x
    }
  }
  return max+1
}